appId: com.parcomx.patio
---
- launchApp
- openLink: "patio://"
- tapOn: "Explorar comida"
- tapOn: "Ver lugares cerca"
- assertVisible: "CERCA DE TI"
- tapOn: "Abrir Cochitacos"
- waitForAnimationToEnd
- takeScreenshot: maestro/screenshots/04-foodie-explorar-seleccionado
