appId: com.parcomx.patio
---
- launchApp
- openLink: "patio://"
- tapOn: "Explorar comida"
- tapOn:
    point: "65%,92%"
- waitForAnimationToEnd
- assertVisible: "Cuenta"
- takeScreenshot: maestro/screenshots/06-foodie-cuenta
