appId: com.parcomx.patio
---
- launchApp
- openLink: "patio://"
- tapOn: "Explorar comida"
- tapOn: "Buscar comida"
- waitForAnimationToEnd
- inputText: "mole"
- tapOn:
    text: "Continue"
    optional: true
- assertVisible: "Abrir resultado Mole rojo con arroz en Don Bonachón"
- takeScreenshot: maestro/screenshots/07-foodie-buscar
