appId: com.parcomx.patio
---
- launchApp
- openLink: "patio://perfil-editar"
- tapOn:
    text: "Empezar"
    optional: true
- assertVisible: "Editar mi.*lugar"
- assertVisible: "Toca los días que.*abres.*"
- scrollUntilVisible:
    element:
      text: "CÓMO COBRAS"
    direction: DOWN
- assertVisible: "Efectivo:.*"
- assertVisible: "Transferencia:.*"
- assertVisible: "Tarjeta:.*"
- takeScreenshot: maestro/screenshots/16-editar-perfil-negocio
